2003-11-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c: Remove unused variables to quiet compiler warnings.

	* src/parse.c src/unset.c: Add garbage collection of defunct
	user-defined variables. This plugs a small memory leak that
	would grow into a much larger one if/when we add string variables.

	* src/graphics.c: Break out creation of key entries into a separate 
	subroutine, with related code cleanup. This is more preparation for
	support of multiple keys.

2003-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wgraph.c (drawgraph): Fix names of struct elements
	changed on 2003-11-13.

2003-11-18  Ethan Merritt  <merritt@u.washington.edu>

	* src/specfun.c: Add parens to make DEC cc compiler happy.

2003-11-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/unset.c (unset_colorbox) (unset_pm3d): Removed extra
	c_token++.

2003-11-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (cbtick_callback): Fixed position of nomirrored
	horizontal color box tics.

2003-11-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/xlib.trm src/term.h: Update xlib device to use the actual
	x11 driver routines, so the output will be identical.

2003-11-14  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Fix bug in enhanced text overprint mode; vertical
	offset of overprinted text is now honored as specified in the
	documentation.

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history): Typo fixed.

	* src/command.c (history_command): Better error message for the
	"history" command not being available for GNU readline.

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/show.c docs/gnuplot.doc: Options {float | int} for
	'show palette palette <n>', and let the output go to that of 'set
	print'.

	* src/command.h src/command.c: Let variables print_out and
	print_out_name be global instead of static.

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>
