@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: command.c,v 1.79 2003/11/13 18:05:14 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: command.c,v 1.80 2003/11/24 15:15:14 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - command.c */
@@ -1299,11 +1299,122 @@ system_command()
 }
 
 
-/* 'test' command is processed by test_term() in term.c */
-
-/* process the 'testtime' command */
+/* process the 'test palette' command
+ *
+ * note 1: it works on terminals supporting as well as not supporting pm3d
+ * note 2: due to the call to do_command(), the rest of the current command
+ *	   line after 'test palette ;' is discarded
+ * note 3: saving current gnuplot setup as of 'save set' to a temporary file
+ *	   can be disabled by undefining TESTPAL_SAVEFILE
+ */
+#define TESTPAL_SAVEFILE
 void
-testtime_command()
+test_palette_subcommand()
+{
+#ifndef PM3D
+    int_error(c_token, "'test palette' requires pm3d support built-in");
+#else
+    int i, colors = 256;
+    rgb_color rgb1;
+    const char pre1[] = "\
+reset;set multi;\
+uns border;uns key;uns xtics;uns ytics;\
+se tic out;se cbtic 0,0.1,1; se cbtic nomirr;\
+se xr[0:1];se yr[0:1];se zr[0:1];se cbr[0:1];\
+se pm3d map;set colorbox hor user orig 0.08,0.07 size 0.79,0.12;";
+    const char pre2[] = "splot 1/0;\n\n\n";
+	/* note: those \n's are because of x11 terminal problems with blocking pipe */
+    const char pre3[] = "\
+se size 1,0.8;se orig 0,0.2;uns pm3d;\
+se key outside;se grid;se tics in;se xtics 0,0.1;se ytics 0,0.1;\
+se tit'R,G,B profiles of the current color palette';";
+    const char post[] = "\
+;\n\n\nuns multi;se orig 0,0;se size 1,1;\n"; /* no final 'reset' in favour of mousing */
+    char *cmd;
+    char palFile[80]; /* must be enough for strcpy of a tmp file below */
+    FILE *f;
+#ifdef TESTPAL_SAVEFILE
+    char saveFile[80]; /* must be enough for strcpy of a tmp file below */
+    int fdSaveFile;
+    FILE *fSaveFile;
+#endif
+    int can_pm3d = (term->make_palette && term->set_color);
+    char default_order[] = "rgb";
+    char *order = default_order;
+
+    c_token++;
+    if (!END_OF_COMMAND) {
+	int err = (token[c_token].length != 3);
+	order = input_line + token[c_token].start_index;
+	if (!err) {
+	    err += (memchr(order, 'r', 3) == NULL);
+	    err += (memchr(order, 'g', 3) == NULL);
+	    err += (memchr(order, 'b', 3) == NULL);
+	}
+	if (err)
+	    int_error(c_token, "combination rgb or gbr or brg etc. expected");
+	c_token++;
+    }
+    cmd = gp_alloc(strlen(pre1)+strlen(pre2)+strlen(pre3)+strlen(saveFile)+128+strlen(post), "test rgb");
+    if (!cmd) return;
+#ifdef TESTPAL_SAVEFILE
+    /* save current gnuplot 'set' status because of the tricky set's for our temporary testing plot */
+    strcpy(saveFile, "gpSavXXXXXX");
+    fdSaveFile = mkstemp(&saveFile[0]);
+    if (NULL != (fSaveFile = fdopen(fdSaveFile, "w+"))) {
+	fputs("\n\n\n", fSaveFile); /* again, x11 blocked pipe */
+	save_set(fSaveFile);
+    }
+#endif
+    /* save current palette into a temporary file */
+    strcpy(palFile, "gpRgbXXXXXX");
+    i = mkstemp(&palFile[0]);
+    f = fdopen(i, "w");
+    for (i = 0; i < colors; i++) {
+	/* colours equidistantly from [0,1] */
+	double z = (double)i / (colors - 1); 
+	/* needed, since printing without call to set_color()*/
+	double gray = (sm_palette.positive == SMPAL_NEGATIVE) ? 1-z : z;
+	rgb1_from_gray(gray, &rgb1);
+	fprintf(f, "%0.4f\t%0.4f\t%0.4f\t%0.4f\n", z, rgb1.r, rgb1.g, rgb1.b);
+    }
+    fclose(f);
+    strcpy(cmd, pre1);
+    if (can_pm3d)
+	strcat(cmd, pre2);
+    strcat(cmd, pre3);
+    sprintf(cmd+strlen(cmd), "p'%s'", palFile);
+    for (i=0; i<strlen(order); i++) {
+	if (i>0) strcat(cmd, ",''");
+	switch (order[i]) {
+	    case 'r': strcat(cmd, "tit'red'w l 1"); break;
+	    case 'g': strcat(cmd, "u 1:3 tit'green'w l 2"); break;
+	    case 'b': strcat(cmd, "u 1:4 tit'blue'w l 3"); break;
+	}
+    }
+    strcat(cmd, post);
+    do_string(cmd);
+    free(cmd);
+    remove(palFile);
+#ifdef TESTPAL_SAVEFILE
+    /* load previously saved gnuplot's set status */
+    if (fdSaveFile > 0) {
+	rewind(fSaveFile);
+	load_file(fSaveFile, saveFile, FALSE); /* note: it does fclose() */
+	/* input_line[] and token[] now destroyed! */
+	c_token = num_tokens = 0;
+    }
+    remove(saveFile);
+#endif
+#endif /* PM3D */
+}
+
+/* process the undocumented 'test time' command
+ *	test time 'format' 'string'
+ * to assist testing of time routines
+ */
+void
+test_time_subcommand()
 {
     char *format = NULL;
     char *string = NULL;
@@ -1335,6 +1446,33 @@ testtime_command()
 	} /* else: expecting time string */
 	free(format);
     } /* else: expecting format string */
+}
+
+
+/* process the 'test' command */
+void
+test_command()
+{
+    int what;
+    c_token++;
+    if (END_OF_COMMAND) {
+	test_term();
+	return;
+    }
+
+    what = lookup_table(&test_tbl[0], c_token);
+    switch (what) {
+	case TEST_TERMINAL: test_term(); break;
+	case TEST_PALETTE: test_palette_subcommand(); break;
+	case TEST_TIME: test_time_subcommand(); break;
+	default:
+#if 1
+	    int_error(c_token, "none or keyword 'terminal' or 'palette' expected");
+#else
+	    /* don't document undocumented command :-) */
+	    int_error(c_token, "none or keyword 'terminal', 'palette' or 'time' expected");
+#endif
+    }
 }
 
 
